@@ -1,0 +1,9 @@
+Trace: 'blah' isa class java.lang.String ? TRUE at isa.sl:7
+Trace: [] isa interface java.util.List ? TRUE at isa.sl:8
+Trace: 3 isa class java.lang.Integer ? TRUE at isa.sl:9
+Trace: 3 isa class java.lang.Number ? TRUE at isa.sl:10
+Trace: 3.0 isa class java.lang.Number ? TRUE at isa.sl:11
+Trace: 3.0 isa class java.lang.Double ? TRUE at isa.sl:12
+Trace: 3.0 !isa class java.lang.Integer ? TRUE at isa.sl:13
+Trace: 5 isa class java.lang.Integer ? TRUE at isa.sl:14
+Warning: attempted an invalid cast: java.lang.String at isa.sl:15
